--- a/EduSync/src/pages/Quiz.css
+++ b/EduSync/src/pages/Quiz.css
@@ -1,4 +1,4 @@
-/* .quiz-container {
+.quiz-container {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -88,4 +88,4 @@
   top:30%;
   font-size: 40px;
   text-align: center;  
- }  */
+ } 
